syntax = "proto3";

package api.strategy.v1;

import "google/api/annotations.proto";
import "validate/validate.proto";
import "base.proto";
import "strategy/strategy.proto";

option go_package = "prometheus-manager/api/strategy/v1;v1";
option java_multiple_files = true;
option java_package = "api.strategy.v1";

service Crud {
  rpc CreateRule (CreateRuleRequest) returns (CreateRuleReply) {
    option (google.api.http) = {
      post: "/rule/v1/add"
      body: "*"
    };
  }
  rpc UpdateRule (UpdateRuleRequest) returns (UpdateRuleReply) {
    option (google.api.http) = {
      put: "/rule/v1/edit/{id}"
      body: "*"
    };
  }
  rpc DeleteRule (DeleteRuleRequest) returns (DeleteRuleReply) {
    option (google.api.http) = {
      delete: "/rule/v1/delete/{id}"
    };
  }
  rpc RuleDetail (GetRuleDetailRequest) returns (GetRuleDetailReply){
    option (google.api.http) = {
      get: "/rule/v1/detail/{id}"
    };
  }
  rpc Strategies (StrategiesRequest) returns (StrategiesReply){
    option (google.api.http) = {
      get: "/strategies/v1/{node_id}"
    };
  }
}

message CreateRuleRequest {
  Rule rule = 1;
  uint32 group_id = 2 [(validate.rules).uint32.gt = 0];
}
message CreateRuleReply {
  // 响应内容
  Response response = 1;
}

message UpdateRuleRequest {
  string id = 1;
  Rule rule = 2;
}
message UpdateRuleReply {
  // 响应内容
  Response response = 1;
}

message DeleteRuleRequest {
  string id = 1;
}
message DeleteRuleReply {
  // 响应内容
  Response response = 1;
}

message GetRuleDetailRequest {
  string id = 1;
}
message GetRuleDetailReply {
  // 响应内容
  Response response = 1;
  Rule rule = 2;
}

message StrategiesRequest {
  string node_id = 1 [(validate.rules).string.min_len = 1];
}

message StrategiesReply {
  // 响应内容
  Response response = 1;
  repeated StrategyDir strategy_dir = 2;
}
